--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     /* Common Font Import */
     @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
 
-    /* Theme Variables: Red, Shades of Red, and White */
+    /* Theme Variables: Red, Shades of Red, and White yes */
     :root {
       /* Base Palette for Red Theme */
       --logo-primary-red: #8C1C1C;         
